# oop2_ex02

./: CMakeLists.txt
src/: main.cpp
